refactor: 서비스 유닛 테스트 리팩토링
- 애너테이션 순서 변경
- 상수 클래스로 분리 후 제거
- 공통 유틸 메서드 분리
- 메서드명 변경
- private 커맨드 레코드 생성