@@ -1,5 +1,20 @@
 package io.sillysillyman.core.domain.post.service;
 
+import static io.sillysillyman.core.common.constants.TestConstants.ANOTHER_POST_ID;
+import static io.sillysillyman.core.common.constants.TestConstants.BASE_TIME;
+import static io.sillysillyman.core.common.constants.TestConstants.CONTENT;
+import static io.sillysillyman.core.common.constants.TestConstants.DEFAULT_PAGE_SIZE;
+import static io.sillysillyman.core.common.constants.TestConstants.FIRST_PAGE_NUMBER;
+import static io.sillysillyman.core.common.constants.TestConstants.NON_EXISTENT_ID;
+import static io.sillysillyman.core.common.constants.TestConstants.POST_ID;
+import static io.sillysillyman.core.common.constants.TestConstants.SECOND_PAGE_NUMBER;
+import static io.sillysillyman.core.common.constants.TestConstants.UPDATED_CONTENT;
+import static io.sillysillyman.core.common.constants.TestConstants.USERNAME;
+import static io.sillysillyman.core.common.constants.TestConstants.USER_ID;
+import static io.sillysillyman.core.common.fixtures.TestFixtures.createPostEntity;
+import static io.sillysillyman.core.common.fixtures.TestFixtures.createUnauthorizedUserEntity;
+import static io.sillysillyman.core.common.fixtures.TestFixtures.createUserEntity;
+import static io.sillysillyman.core.common.utils.TestUtils.assertPageProperties;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
@@ -17,6 +32,8 @@ import io.sillysillyman.core.domain.post.exception.detail.PostNotFoundException;
 import io.sillysillyman.core.domain.post.repository.PostRepository;
 import io.sillysillyman.core.domain.user.User;
 import io.sillysillyman.core.domain.user.UserEntity;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -35,16 +52,9 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.test.util.ReflectionTestUtils;
 
 @ExtendWith(MockitoExtension.class)
 class PostServiceTest {
-
-    private static final String TEST_USERNAME = "tester";
-    private static final String TEST_CONTENT = "Test content";
-    private static final Long DEFAULT_ID = 1L;
-    private static final Long ANOTHER_ID = 2L;
-    private static final Long NON_EXISTENT_ID = 999L;
 
     @Mock
     private PostRepository postRepository;
@@ -53,98 +63,77 @@ class PostServiceTest {
     private PostService postService;
 
     private User user;
-    private Post post;
     private UserEntity userEntity;
     private PostEntity postEntity;
 
     @BeforeEach
     void setUp() {
-        userEntity = UserEntity.builder()
-            .username(TEST_USERNAME)
-            .build();
-        ReflectionTestUtils.setField(userEntity, "id", DEFAULT_ID);
-
-        postEntity = PostEntity.builder()
-            .content(TEST_CONTENT)
-            .user(userEntity)
-            .build();
-        ReflectionTestUtils.setField(postEntity, "id", DEFAULT_ID);
+        userEntity = createUserEntity();
+        postEntity = createPostEntity(userEntity);
 
         user = User.from(userEntity);
-        post = Post.from(postEntity);
     }
 
-    private void verifyRepositoryFindById(Long postId) {
-        then(postRepository).should().findById(postId);
-        then(postRepository).shouldHaveNoMoreInteractions();
-    }
-
-    private User createUnauthorizedUser() {
-        UserEntity unauthorizedUserEntity = UserEntity.builder()
-            .username("unauthorizedUser")
-            .build();
-        ReflectionTestUtils.setField(unauthorizedUserEntity, "id", ANOTHER_ID);
-        return User.from(unauthorizedUserEntity);
-    }
-
-    @Nested
     @DisplayName("게시물 ID로 게시물 조회")
+    @Nested
     class GetById {
 
+        @DisplayName("게시물 조회 성공")
         @Test
-        @DisplayName("존재하는 게시물 ID로 조회하면 게시물 반환")
         void given_ExistingPostId_when_GetById_then_ReturnPost() {
             // given
-            given(postRepository.findById(DEFAULT_ID)).willReturn(Optional.of(postEntity));
+            given(postRepository.findById(POST_ID)).willReturn(Optional.of(postEntity));
 
             // when
-            Post foundPost = postService.getById(DEFAULT_ID);
+            Post foundPost = postService.getById(POST_ID);
 
             // then
             assertThat(foundPost)
                 .satisfies(post -> {
-                    assertThat(post.getId()).isEqualTo(DEFAULT_ID);
-                    assertThat(post.getContent()).isEqualTo(TEST_CONTENT);
+                    assertThat(post.getId()).isEqualTo(POST_ID);
+                    assertThat(post.getContent()).isEqualTo(CONTENT);
                     assertThat(post.getUser())
                         .satisfies(user -> {
-                            assertThat(user.getId()).isEqualTo(DEFAULT_ID);
-                            assertThat(user.getUsername()).isEqualTo(TEST_USERNAME);
+                            assertThat(user.getId()).isEqualTo(USER_ID);
+                            assertThat(user.getUsername()).isEqualTo(USERNAME);
                         });
                 });
 
-            verifyRepositoryFindById(post.getId());
+            then(postRepository).should().findById(POST_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
 
+        @DisplayName("게시물 조회 실패")
         @Test
-        @DisplayName("존재하지 않는 게시물 ID로 조회하면 예외 발생")
         void given_NonExistentPostId_when_GetById_then_ThrowPostNotFoundException() {
             // given
             given(postRepository.findById(NON_EXISTENT_ID)).willReturn(Optional.empty());
 
             // when
-            ThrowingCallable getAction = () -> postService.getById(NON_EXISTENT_ID);
+            ThrowingCallable when = () -> postService.getById(NON_EXISTENT_ID);
 
             // then
-            assertThatThrownBy(getAction).isInstanceOf(PostNotFoundException.class);
-            verifyRepositoryFindById(NON_EXISTENT_ID);
+            assertThatThrownBy(when)
+                .isInstanceOf(PostNotFoundException.class)
+                .hasMessage(PostErrorCode.POST_NOT_FOUND.getMessage());
+            ;
+
+            then(postRepository).should().findById(NON_EXISTENT_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
     }
 
-    @Nested
     @DisplayName("게시물 생성")
+    @Nested
     class CreatePost {
 
-        private static final String NEW_POST_CONTENT = "New post content";
-
+        @DisplayName("게시물 생성 성공")
         @Test
-        @DisplayName("유효한 요청으로 게시물 생성")
-        void given_ValidPostRequest_when_CreatePost_then_PostSavedSuccessfully() {
+        void given_ValidCommand_when_CreatePost_then_ReturnSavedPost() {
             // given
-            CreatePostCommand command = () -> NEW_POST_CONTENT;
-            PostEntity savedPostEntity = PostEntity.builder()
-                .content(command.content())
-                .user(userEntity)
-                .build();
+            CreatePostCommand command = () -> CONTENT;
+
+            PostEntity savedPostEntity = createPostEntity(userEntity);
 
             given(postRepository.save(any(PostEntity.class))).willReturn(savedPostEntity);
 
@@ -152,96 +141,52 @@ class PostServiceTest {
             Post post = postService.createPost(command, user);
 
             // then
-            assertThat(post.getContent()).isEqualTo(NEW_POST_CONTENT);
-            assertThat(post.getUser().getId()).isEqualTo(user.getId());
+            assertThat(post.getContent()).isEqualTo(CONTENT);
+            assertThat(post.getUser().getId()).isEqualTo(USER_ID);
 
             then(postRepository).should().save(any(PostEntity.class));
             then(postRepository).shouldHaveNoMoreInteractions();
         }
     }
 
-
+    @DisplayName("게시물 목록 조회")
     @Nested
-    @DisplayName("게시물 조회")
     class GetPosts {
 
-        private static final String FIRST_POST = "1st post";
-        private static final String SECOND_POST = "2nd post";
-        private static final int DEFAULT_PAGE_SIZE = 10;
-        private static final Long TARGET_USER_ID = 2L;
-        private static final String TARGET_USER_USERNAME = "targetUser";
-
-        private void verifyRepositoryFindByUserId(Long userId, Pageable pageable) {
-            then(postRepository).should().findByUserId(userId, pageable);
-            then(postRepository).shouldHaveNoMoreInteractions();
-        }
-
-        private void verifyPage(
-            Page<?> page,
-            int expectedSize,
-            int expectedNumber,
-            int expectedPageSize,
-            long expectedTotalElements
-        ) {
-            assertThat(page.getContent()).hasSize(expectedSize);
-            assertThat(page.getNumber()).isEqualTo(expectedNumber);
-            assertThat(page.getSize()).isEqualTo(expectedPageSize);
-            assertThat(page.getTotalElements()).isEqualTo(expectedTotalElements);
-        }
-
-        private void verifyPostContents(Page<Post> pagePost, Long userId) {
-            assertThat(pagePost.getContent())
-                .satisfies(posts -> {
-                    assertThat(posts.get(0).getContent()).isEqualTo(FIRST_POST);
-                    assertThat(posts.get(1).getContent()).isEqualTo(SECOND_POST);
-                    posts.forEach(post -> assertThat(post.getUser().getId()).isEqualTo(userId));
-                });
-        }
-
-        private PostEntity createPostEntityWithId(
-            String username,
-            Long userId,
-            String content,
-            Long postId
-        ) {
-            UserEntity targetUserEntity = UserEntity.builder()
-                .username(username)
-                .build();
-            ReflectionTestUtils.setField(targetUserEntity, "id", userId);
-
-            PostEntity newPostEntity = PostEntity.builder()
-                .content(content)
-                .user(targetUserEntity)
-                .build();
-            ReflectionTestUtils.setField(newPostEntity, "id", postId);
-
-            return newPostEntity;
-        }
+        private static final String OLDER_POST_CONTENT = "older post content";
+        private static final String NEWER_POST_CONTENT = "newer post content";
+        private static final Instant OLDER_POST_CREATED_AT = BASE_TIME;
+        private static final Instant NEWER_POST_CREATED_AT = BASE_TIME.plus(1, ChronoUnit.DAYS);
 
         @Nested
-        @DisplayName("사용자의 게시물 목록 페이징 조회")
+        @DisplayName("사용자 게시물 목록 조회")
         class GetUserPosts {
 
-            private static final String SIXTH_POST = "6th post";
-            private static final String SEVENTH_POST = "7th post";
+            private static final String SECOND_PAGE_OLDER_POST_CONTENT = "second page older post content";
+            private static final String SECOND_PAGE_NEWER_POST_CONTENT = "second page newer post content";
 
             @Test
-            @DisplayName("사용자 게시물 목록 페이지네이션 조회")
-            void given_PostsWithPagination_when_GetPosts_then_ReturnPaginatedPosts() {
+            @DisplayName("사용자 게시물 목록 페이지 조회")
+            void given_UserWithPosts_when_GetPosts_then_ReturnPageOfPosts() {
                 // given
-                Pageable pageable = PageRequest.of(0, DEFAULT_PAGE_SIZE);
+                Pageable pageable = PageRequest.of(
+                    FIRST_PAGE_NUMBER,
+                    DEFAULT_PAGE_SIZE,
+                    Sort.by("createdAt").descending()
+                );
+
                 List<PostEntity> postEntities = List.of(
-                    createPostEntityWithId(
-                        TARGET_USER_USERNAME,
-                        TARGET_USER_ID,
-                        FIRST_POST,
-                        DEFAULT_ID
+                    createPostEntity(
+                        ANOTHER_POST_ID,
+                        NEWER_POST_CONTENT,
+                        NEWER_POST_CREATED_AT,
+                        userEntity
                     ),
-                    createPostEntityWithId(
-                        TARGET_USER_USERNAME,
-                        TARGET_USER_ID,
-                        SECOND_POST,
-                        ANOTHER_ID
+                    createPostEntity(
+                        POST_ID,
+                        OLDER_POST_CONTENT,
+                        OLDER_POST_CREATED_AT,
+                        userEntity
                     )
                 );
                 Page<PostEntity> postEntityPage = new PageImpl<>(
@@ -250,121 +195,153 @@ class PostServiceTest {
                     postEntities.size()
                 );
 
-                given(postRepository.findByUserId(TARGET_USER_ID, pageable))
-                    .willReturn(postEntityPage);
+                given(postRepository.findByUserId(USER_ID, pageable)).willReturn(postEntityPage);
 
                 // when
-                Page<Post> postPage = postService.getUserPosts(TARGET_USER_ID, pageable);
+                Page<Post> postPage = postService.getUserPosts(USER_ID, pageable);
 
                 // then
-                verifyPage(postPage, 2, 0, DEFAULT_PAGE_SIZE, 2);
-                verifyPostContents(postPage, TARGET_USER_ID);
-                verifyRepositoryFindByUserId(TARGET_USER_ID, pageable);
+                assertPageProperties(postPage, 2, FIRST_PAGE_NUMBER, DEFAULT_PAGE_SIZE, 2,
+                    posts -> {
+                        assertThat(posts.get(0).getContent()).isEqualTo(NEWER_POST_CONTENT);
+                        assertThat(posts.get(1).getContent()).isEqualTo(OLDER_POST_CONTENT);
+                        posts.forEach(
+                            post -> assertThat(post.getUser().getId()).isEqualTo(USER_ID));
+                    }
+                );
+
+                then(postRepository).should().findByUserId(USER_ID, pageable);
+                then(postRepository).shouldHaveNoMoreInteractions();
             }
 
             @Test
             @DisplayName("게시물이 없는 사용자의 게시물 목록 조회")
             void given_UserWithNoPosts_when_GetUserPosts_then_ReturnEmptyPage() {
                 // given
-                Pageable pageable = PageRequest.of(0, DEFAULT_PAGE_SIZE);
+                Pageable pageable = PageRequest.of(
+                    FIRST_PAGE_NUMBER,
+                    DEFAULT_PAGE_SIZE,
+                    Sort.by("createdAt").descending()
+                );
+
                 Page<PostEntity> emptyPostEntityPage = new PageImpl<>(
                     Collections.emptyList(),
                     pageable,
                     0
                 );
 
-                given(postRepository.findByUserId(TARGET_USER_ID, pageable))
+                given(postRepository.findByUserId(USER_ID, pageable))
                     .willReturn(emptyPostEntityPage);
 
                 // when
-                Page<Post> postPage = postService.getUserPosts(TARGET_USER_ID, pageable);
+                Page<Post> postPage = postService.getUserPosts(USER_ID, pageable);
 
                 // then
-                verifyPage(postPage, 0, 0, DEFAULT_PAGE_SIZE, 0);
-                verifyRepositoryFindByUserId(TARGET_USER_ID, pageable);
+                assertPageProperties(postPage, 0, FIRST_PAGE_NUMBER, DEFAULT_PAGE_SIZE, 0);
+
+                then(postRepository).should().findByUserId(USER_ID, pageable);
+                then(postRepository).shouldHaveNoMoreInteractions();
             }
 
             @Test
             @DisplayName("두 번째 페이지의 게시물 목록 조회")
-            void given_MultiplePages_when_GetSecondPage_then_ReturnCorrectPageOfPosts() {
+            void given_MultiplePages_when_GetSecondPage_then_ReturnSecondPageOfPosts() {
                 // given
-                Pageable pageable = PageRequest.of(1, 5);
+                Pageable pageable = PageRequest.of(
+                    SECOND_PAGE_NUMBER,
+                    DEFAULT_PAGE_SIZE,
+                    Sort.by("createdAt").descending()
+                );
+
                 List<PostEntity> postEntities = List.of(
-                    createPostEntityWithId(
-                        TARGET_USER_USERNAME,
-                        TARGET_USER_ID,
-                        SIXTH_POST,
-                        DEFAULT_ID
+                    createPostEntity(
+                        ANOTHER_POST_ID,
+                        SECOND_PAGE_NEWER_POST_CONTENT,
+                        NEWER_POST_CREATED_AT,
+                        userEntity
                     ),
-                    createPostEntityWithId(
-                        TARGET_USER_USERNAME,
-                        TARGET_USER_ID,
-                        SEVENTH_POST,
-                        ANOTHER_ID
+                    createPostEntity(
+                        POST_ID,
+                        SECOND_PAGE_OLDER_POST_CONTENT,
+                        OLDER_POST_CREATED_AT,
+                        userEntity
                     )
                 );
 
-                postEntities.forEach(postEntity ->
-                    ReflectionTestUtils.setField(
-                        postEntity,
-                        "id",
-                        postEntities.indexOf(postEntity) + 6L
-                    )
-                );
+                Page<PostEntity> postEntityPage = new PageImpl<>(postEntities, pageable, 12);
 
-                Page<PostEntity> postEntityPage = new PageImpl<>(postEntities, pageable, 7);
-
-                given(postRepository.findByUserId(TARGET_USER_ID, pageable))
-                    .willReturn(postEntityPage);
+                given(postRepository.findByUserId(USER_ID, pageable)).willReturn(postEntityPage);
 
                 // when
-                Page<Post> postPage = postService.getUserPosts(TARGET_USER_ID, pageable);
+                Page<Post> postPage = postService.getUserPosts(USER_ID, pageable);
 
                 // then
-                verifyPage(postPage, 2, 1, 5, 7);
+                assertPageProperties(postPage, 2, SECOND_PAGE_NUMBER, DEFAULT_PAGE_SIZE, 12,
+                    content -> {
+                        assertThat(content.get(0).getContent()).isEqualTo(
+                            SECOND_PAGE_NEWER_POST_CONTENT);
+                        assertThat(content.get(1).getContent()).isEqualTo(
+                            SECOND_PAGE_OLDER_POST_CONTENT);
+                        content.forEach(
+                            post -> assertThat(post.getUser().getId()).isEqualTo(USER_ID)
+                        );
+                    }
+                );
 
-                assertThat(postPage.getContent())
-                    .satisfies(content -> {
-                        assertThat(content.get(0).getContent()).isEqualTo(SIXTH_POST);
-                        assertThat(content.get(1).getContent()).isEqualTo(SEVENTH_POST);
-                    });
-
-                verifyRepositoryFindByUserId(TARGET_USER_ID, pageable);
+                then(postRepository).should().findByUserId(USER_ID, pageable);
+                then(postRepository).shouldHaveNoMoreInteractions();
             }
         }
 
         @Nested
-        @DisplayName("본인 게시물 목록 페이징 조회")
+        @DisplayName("본인 게시물 목록 조회")
         class GetMyPosts {
 
             @Test
-            @DisplayName("현재 사용자의 게시물 목록을 페이징하여 반환")
-            void given_AuthenticatedUser_when_GetMyPosts_then_ReturnPaginatedPosts() {
+            @DisplayName("본인 게시물 목록 페이지 반환")
+            void given_AuthenticatedUser_when_GetMyPosts_then_ReturnPageOfPosts() {
                 // given
                 Pageable pageable = PageRequest.of(
-                    0,
+                    FIRST_PAGE_NUMBER,
                     DEFAULT_PAGE_SIZE,
                     Sort.by("createdAt").descending()
                 );
+
                 List<PostEntity> postEntities = List.of(
-                    createPostEntityWithId(TEST_USERNAME, DEFAULT_ID, FIRST_POST, DEFAULT_ID),
-                    createPostEntityWithId(TEST_USERNAME, DEFAULT_ID, SECOND_POST, DEFAULT_ID)
+                    createPostEntity(
+                        ANOTHER_POST_ID,
+                        NEWER_POST_CONTENT,
+                        NEWER_POST_CREATED_AT,
+                        userEntity
+                    ),
+                    createPostEntity(
+                        POST_ID,
+                        OLDER_POST_CONTENT,
+                        OLDER_POST_CREATED_AT,
+                        userEntity
+                    )
                 );
+
                 Page<PostEntity> postEntityPage = new PageImpl<>(postEntities, pageable, 2);
 
-                given(postRepository.findByUserId(user.getId(), pageable))
-                    .willReturn(postEntityPage);
+                given(postRepository.findByUserId(USER_ID, pageable)).willReturn(postEntityPage);
 
                 // when
                 Page<Post> postPage = postService.getMyPosts(user, pageable);
 
                 // then
-                assertThat(postPage.getContent().getFirst().getUser().getId())
-                    .isEqualTo(user.getId());
+                assertPageProperties(postPage, 2, FIRST_PAGE_NUMBER, DEFAULT_PAGE_SIZE, 2,
+                    content -> {
+                        assertThat(content.get(0).getContent()).isEqualTo(NEWER_POST_CONTENT);
+                        assertThat(content.get(1).getContent()).isEqualTo(OLDER_POST_CONTENT);
+                        content.forEach(
+                            post -> assertThat(post.getUser().getId()).isEqualTo(USER_ID)
+                        );
+                    }
+                );
 
-                verifyPage(postPage, 2, 0, DEFAULT_PAGE_SIZE, 2);
-                verifyPostContents(postPage, user.getId());
-                verifyRepositoryFindByUserId(user.getId(), pageable);
+                then(postRepository).should().findByUserId(USER_ID, pageable);
+                then(postRepository).shouldHaveNoMoreInteractions();
             }
         }
     }
@@ -373,40 +350,33 @@ class PostServiceTest {
     @DisplayName("게시물 수정")
     class UpdatePost {
 
-        private static final String UPDATED_CONTENT = "Updated content";
-
         @Test
         @DisplayName("게시물 작성자가 수정 성공")
-        void given_ValidOwner_when_UpdatePost_then_UpdateSuccessfully() {
+        void given_ValidCommand_when_UpdatePost_then_PostUpdatedSuccessfully() {
             // given
             UpdatePostCommand command = () -> UPDATED_CONTENT;
-            PostEntity updatedPostEntity = PostEntity.builder()
-                .content(UPDATED_CONTENT)
-                .user(userEntity)
-                .build();
-            ReflectionTestUtils.setField(updatedPostEntity, "id", DEFAULT_ID);
 
-            given(postRepository.findById(postEntity.getId()))
-                .willReturn(Optional.of(postEntity));
-            given(postRepository.save(any(PostEntity.class)))
-                .willReturn(updatedPostEntity);
+            PostEntity updatedPostEntity = createPostEntity(UPDATED_CONTENT, userEntity);
+
+            given(postRepository.findById(POST_ID)).willReturn(Optional.of(postEntity));
+            given(postRepository.save(any(PostEntity.class))).willReturn(updatedPostEntity);
 
             // when
-            postService.updatePost(post.getId(), command, user);
+            postService.updatePost(POST_ID, command, user);
             Post updatedPost = Post.from(updatedPostEntity);
 
             // then
             assertThat(updatedPost.getContent()).isEqualTo(UPDATED_CONTENT);
 
             then(postRepository).should().save(any(PostEntity.class));
-            verifyRepositoryFindById(post.getId());
+            then(postRepository).should().findById(POST_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
 
         @Test
-        @DisplayName("존재하지 않는 게시물 수정 시도")
+        @DisplayName("존재하지 않는 게시물 수정 실패")
         void given_NonExistentPostId_when_UpdatePost_then_ThrowPostNotFoundException() {
             // given
-
             UpdatePostCommand command = () -> UPDATED_CONTENT;
 
             given(postRepository.findById(NON_EXISTENT_ID)).willReturn(Optional.empty());
@@ -419,7 +389,8 @@ class PostServiceTest {
                 .isInstanceOf(PostNotFoundException.class)
                 .hasMessage(PostErrorCode.POST_NOT_FOUND.getMessage());
 
-            verifyRepositoryFindById(NON_EXISTENT_ID);
+            then(postRepository).should().findById(NON_EXISTENT_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
 
         @Test
@@ -427,25 +398,26 @@ class PostServiceTest {
         void given_UnauthorizedUser_when_UpdatePost_then_ThrowForbiddenAccessException() {
             // given
             UpdatePostCommand command = () -> UPDATED_CONTENT;
-            User unauthorizedUser = createUnauthorizedUser();
 
-            given(postRepository.findById(postEntity.getId()))
-                .willReturn(Optional.of(postEntity));
+            UserEntity unauthorizedUserEntity = createUnauthorizedUserEntity();
+            User unauthorizedUser = User.from(unauthorizedUserEntity);
+
+            given(postRepository.findById(POST_ID)).willReturn(Optional.of(postEntity));
 
             // when
-            ThrowingCallable when = () ->
-                postService.updatePost(
-                    postEntity.getId(),
-                    command,
-                    unauthorizedUser
-                );
+            ThrowingCallable when = () -> postService.updatePost(
+                POST_ID,
+                command,
+                unauthorizedUser
+            );
 
             // then
             Assertions.assertThatThrownBy(when)
                 .isInstanceOf(ForbiddenAccessException.class)
                 .hasMessage(AuthErrorCode.FORBIDDEN_ACCESS.getMessage());
 
-            verifyRepositoryFindById(post.getId());
+            then(postRepository).should().findById(POST_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
     }
 
@@ -454,21 +426,22 @@ class PostServiceTest {
     class DeletePostEntity {
 
         @Test
-        @DisplayName("정상적인 게시물 삭제")
-        void given_ValidPost_when_DeletePost_then_DeleteSuccessfully() {
+        @DisplayName("게시물 삭제 성공")
+        void given_ExistingPost_when_DeletePost_then_DeleteSuccessfully() {
             // given
-            given(postRepository.findById(postEntity.getId()))
-                .willReturn(Optional.of(postEntity));
+            given(postRepository.findById(POST_ID)).willReturn(Optional.of(postEntity));
 
             // when
-            postService.deletePost(post.getId(), user);
+            postService.deletePost(POST_ID, user);
 
             // then
-            verifyRepositoryDelete(post.getId());
+            then(postRepository).should().findById(POST_ID);
+            then(postRepository).should().delete(any(PostEntity.class));
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
 
         @Test
-        @DisplayName("존재하지 않는 게시물 삭제 시도")
+        @DisplayName("존재하지 않는 게시물 삭제 실패")
         void given_NonExistentPostId_when_DeletePost_then_ThrowPostNotFoundException() {
             // given
             given(postRepository.findById(NON_EXISTENT_ID)).willReturn(Optional.empty());
@@ -481,32 +454,28 @@ class PostServiceTest {
                 .isInstanceOf(PostNotFoundException.class)
                 .hasMessage(PostErrorCode.POST_NOT_FOUND.getMessage());
 
-            verifyRepositoryFindById(NON_EXISTENT_ID);
+            then(postRepository).should().findById(NON_EXISTENT_ID);
+            then(postRepository).shouldHaveNoMoreInteractions();
         }
 
         @Test
         @DisplayName("권한이 없는 사용자의 게시물 삭제 시도")
         void given_UnauthorizedUser_when_DeletePost_then_ThrowForbiddenAccessException() {
             // given
-            User unauthorizedUser = createUnauthorizedUser();
+            UserEntity unauthorizedUserEntity = createUnauthorizedUserEntity();
+            User unauthorizedUser = User.from(unauthorizedUserEntity);
 
-            given(postRepository.findById(postEntity.getId()))
-                .willReturn(Optional.of(postEntity));
+            given(postRepository.findById(POST_ID)).willReturn(Optional.of(postEntity));
 
             // when
-            ThrowingCallable when = () -> postService.deletePost(post.getId(), unauthorizedUser);
+            ThrowingCallable when = () -> postService.deletePost(POST_ID, unauthorizedUser);
 
             // then
             Assertions.assertThatThrownBy(when)
                 .isInstanceOf(ForbiddenAccessException.class)
                 .hasMessage(AuthErrorCode.FORBIDDEN_ACCESS.getMessage());
 
-            verifyRepositoryFindById(post.getId());
-        }
-
-        private void verifyRepositoryDelete(Long postId) {
-            then(postRepository).should().findById(postId);
-            then(postRepository).should().delete(any(PostEntity.class));
+            then(postRepository).should().findById(POST_ID);
             then(postRepository).shouldHaveNoMoreInteractions();
         }
     }
